757: Addressed 2nd review batch